Distorted strokes while painting small brush in UV/Image + low performance #35372

Closed
opened 2013-05-15 12:43:26 +02:00 by Jiri Caslava · 6 comments

%%%--- Operating System, Graphics card ---

Tested on Win Vista 64, Linux 64, various GPU (Nvidia, Intel)

- Blender version with error, and version that worked ---

blender-2.67-r56809
Worked in 2.66

- Short description of error ---

Painting by very small brush (size 1-2) in UV/Image editor on low view zoom (~1/4) make distorted strokes (evenly missing pixels - like shading in 1-bit image). Also painting is very slow and consumes a lot of memory. Larger brushes are much faster, which doesn't make sense - more pixels to write.
Works in 2.66 - properly filled strokes, more than 10x faster and 10-100x less memory during and after painting. Looks like memory leak.
Speed issue may be related to #35057 bug (3D paint).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Try paint in UV/Image editor and then zoom to painted strokes in attached .blend.
%%%

%%%--- Operating System, Graphics card --- Tested on Win Vista 64, Linux 64, various GPU (Nvidia, Intel) - Blender version with error, and version that worked --- blender-2.67-r56809 Worked in 2.66 - Short description of error --- Painting by very small brush (size 1-2) in UV/Image editor on low view zoom (~1/4) make distorted strokes (evenly missing pixels - like shading in 1-bit image). Also painting is very slow and consumes a lot of memory. Larger brushes are much faster, which doesn't make sense - more pixels to write. Works in 2.66 - properly filled strokes, more than 10x faster and 10-100x less memory during and after painting. Looks like memory leak. Speed issue may be related to #35057 bug (3D paint). - Steps for others to reproduce the error (preferably based on attached .blend file) --- Try paint in UV/Image editor and then zoom to painted strokes in attached .blend. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%What do you mean by 10-100x less memory during and after painting? How are you measuring that, what are the numbers?%%%

%%%What do you mean by 10-100x less memory during and after painting? How are you measuring that, what are the numbers?%%%

%%%I fixed the distorted strokes now, and did some changes that might fix the performance issue. Builds with revision 56823 or newer here will have the fix:
http://builder.blender.org/download/

I'm not sure what the cause of extra memory usage might be though, need more information about what you're seeing.%%%

%%%I fixed the distorted strokes now, and did some changes that might fix the performance issue. Builds with revision 56823 or newer here will have the fix: http://builder.blender.org/download/ I'm not sure what the cause of extra memory usage might be though, need more information about what you're seeing.%%%
Author

%%%Testing 56823 revision, distorted strokes and performance drop are fixed. Memory usage are still same.

I measure memory consumption in Blender header and in OS process manager. Values are after loading my test file and after painting 40 similar strokes in it.
official Blender 2.66a
before painting - Blender header:12.84M(4.14M) OS: 78,1M
after painting - Blender header: 14,42M (16,7M) OS: 92,3M

2.67
before painting - Blender header: 9.23M(4.14M) OS: 88,7M
after painting - Blender header: 213,5M (16,2M) OS: 426M

I also noticed, memory usage cohere with length of stroke. Very long stroke (2 minute riding of mouse on 1024x1024 image) take 1GB of RAM, while on 2.66 only 2-3MB.
Also this is probably somewhat related with undo history. When approx. same length strokes is painted, memory usage stop rising after same number of strokes as default undo steps - 32. However changing undo step or memory limit in preferences doesn't seem to affect this.
%%%

%%%Testing 56823 revision, distorted strokes and performance drop are fixed. Memory usage are still same. I measure memory consumption in Blender header and in OS process manager. Values are after loading my test file and after painting 40 similar strokes in it. official Blender 2.66a before painting - Blender header:12.84M(4.14M) OS: 78,1M after painting - Blender header: 14,42M (16,7M) OS: 92,3M 2.67 before painting - Blender header: 9.23M(4.14M) OS: 88,7M after painting - Blender header: 213,5M (16,2M) OS: 426M I also noticed, memory usage cohere with length of stroke. Very long stroke (2 minute riding of mouse on 1024x1024 image) take 1GB of RAM, while on 2.66 only 2-3MB. Also this is probably somewhat related with undo history. When approx. same length strokes is painted, memory usage stop rising after same number of strokes as default undo steps - 32. However changing undo step or memory limit in preferences doesn't seem to affect this. %%%

%%%Found the reason for the memory usage now, again related to long strokes with small brush size. Memory usage will increase until the undo buffer is filled, but indeed this was too much.

Fix in svn now, thanks for the report and testing. Revision 56834 or newer will have the fix.%%%

%%%Found the reason for the memory usage now, again related to long strokes with small brush size. Memory usage will increase until the undo buffer is filled, but indeed this was too much. Fix in svn now, thanks for the report and testing. Revision 56834 or newer will have the fix.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35372
No description provided.