Fix part of #35372: distorted strokes when painting zoomed out with a small brush size. Interpolated mouse coordinates should not get rounded to integers.